# paoo1

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  adelina_paoo  cmake_install.cmake  main.cpp
src/: CMakeLists.txt  main.cpp
src/Calculator/: CMakeLists.txt  Calculator.cpp  Calculator.h
src/Employee/: CMakeLists.txt  CTestTestfile.cmake  Employee.cpp  Employee.h  InterfaceEmployee.h  Makefile  cmake_install.cmake
src/Manager/: CMakeLists.txt  CTestTestfile.cmake  Makefile  Manager.cpp  Manager.h  cmake_install.cmake
